# os

./: .gitignore  CMakeLists.txt  README  limine.cfg  linker.ld  setup_iso.sh
arch/i386/: boot.S  boot.nasm  gdt.nasm  idt.nasm  tty.c
arch/x86_64/: boot.c  boot.nasm  gdt.h  gdt.nasm  idt.h  idt.nasm  startup.nsh  uefi.h
include/: arg.h  init.h  interrupt.h  io.h  kernel.h  math.h  string.h  types.h  uefi.h
include/kalloc/: kalloc.h  memory.h
include/memory/: init.h  kalloc.h  paging.h
kernel/: init.c  interrupt.c  io.c  kernel.c  memory.c  string.c
kernel/kalloc/: kalloc.c
